--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -2,7 +2,7 @@
 .button {
   height: 42px;
   width: 150px;
-  background-color: #f8cf04;
+  background-color: #FFD819;
   border: none;
   font-size: 16px;
   font-weight: 600;
