--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,11 @@
 @import "./nav";
 @import "./slider-item";
 @import "./button.scss";
+@import './services';
+@import './featured.scss';
+@import './section-title';
+@import './section-menu';
+@import './section-navigate';
+@import './card';
+@import './product-baner';
+@import './best-sellers';
