--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,6 +1,6 @@
 .home {
   background: linear-gradient(to bottom, #f8cf04 150px, #55559a00 0%);
-  min-height: 77vh;
+  // min-height: 77vh;
   display: grid;
   grid-template-rows: 2rem 1fr;
   &__top-nav {
