--- a/src/scss/_section-navigate.scss
+++ b/src/scss/_section-navigate.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
+    width: 50px;
     &__icon {
         border: 1px solid gray;
         cursor: pointer;
