--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,6 @@
 @import './card';
 @import './product-baner';
 @import './best-sellers';
+@import './popular-categories';
+@import './new-arrivals';
+@import './mini-card';
