--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -240,7 +240,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 100%; }
+  width: 50px; }
   .section-navigate__icon {
     border: 1px solid gray;
     cursor: pointer;
@@ -306,7 +306,8 @@ body {
 .best-sellers {
   width: 62vw;
   margin: 0 auto;
-  padding-top: 2px; }
+  padding-top: 2px;
+  margin-bottom: 23px; }
   @media (max-width: 596px) {
     .best-sellers {
       width: 85vw; } }
@@ -314,11 +315,18 @@ body {
     display: grid;
     grid-template-columns: 2fr 3.5fr;
     column-gap: 10px; }
+    @media (max-width: 596px) {
+      .best-sellers__main {
+        row-gap: 12px;
+        grid-template-columns: 1fr; } }
     .best-sellers__main--left__bottom {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       margin-top: 55px; }
+      @media (max-width: 596px) {
+        .best-sellers__main--left__bottom {
+          display: none; } }
       .best-sellers__main--left__bottom--options {
         display: flex;
         justify-content: center;
@@ -331,3 +339,120 @@ body {
       grid-template-columns: 1fr 1fr 1fr;
       row-gap: 10px;
       column-gap: 10px; }
+      @media (max-width: 596px) {
+        .best-sellers__main--right {
+          grid-template-columns: 1fr; } }
+
+.popular-categories {
+  background-color: #ECECEC;
+  padding-bottom: 40px; }
+  .popular-categories__main {
+    width: 62vw;
+    margin: 0 auto;
+    padding-top: 2px;
+    margin-top: 10px; }
+    @media (max-width: 596px) {
+      .popular-categories__main {
+        width: 85vw; } }
+    .popular-categories__main--body {
+      margin-top: 10px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 10px;
+      row-gap: 10px; }
+
+.popular-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 350px;
+  height: 220px;
+  border: 1px solid #cccccc;
+  font-family: sans-serif;
+  background-color: #fbfafa; }
+  .popular-item__image {
+    width: 100%;
+    object-fit: contain;
+    padding: 5px;
+    margin: auto;
+    padding: 10px; }
+  .popular-item__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 85%;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 2px; }
+    .popular-item__info--title {
+      font-size: 17px;
+      font-weight: 600; }
+    .popular-item__info--text {
+      font-size: 11px;
+      font-weight: 550;
+      color: #3d3b3b; }
+    .popular-item__info--show-all {
+      font-size: 14px;
+      font-weight: 600;
+      color: #FFD819; }
+
+.new-arrival {
+  width: 62vw;
+  margin: 0 auto;
+  padding-top: 2px;
+  margin-top: 30px;
+  margin-bottom: 30px; }
+  @media (max-width: 596px) {
+    .new-arrival {
+      width: 85vw; } }
+  .new-arrival__header {
+    display: grid;
+    grid-template-columns: 4.5fr 2fr .5fr;
+    align-items: center;
+    margin-bottom: 15px; }
+  .new-arrival__main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 8px;
+    column-gap: 8px; }
+
+.mini-card {
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+  border: 1px solid lightgray;
+  font-family: sans-serif; }
+  .mini-card__left {
+    padding: 5px; }
+    .mini-card__left--image {
+      width: 100%;
+      height: 75px;
+      display: block;
+      object-fit: contain; }
+  .mini-card__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; }
+    .mini-card__info--title {
+      font-size: 16px;
+      font-weight: 600; }
+    .mini-card__info--rating {
+      display: flex;
+      flex-direction: row;
+      align-items: center; }
+      .mini-card__info--rating-reviews {
+        margin-left: 4px;
+        margin-bottom: 5px;
+        font-size: 10px; }
+    .mini-card__info--price {
+      font-size: 15px;
+      font-weight: 600; }
+    .mini-card__info--sale {
+      display: flex;
+      align-items: center; }
+      .mini-card__info--sale__current-price {
+        font-size: 16px;
+        color: #FF0000;
+        font-weight: 600; }
+      .mini-card__info--sale__old-price {
+        font-size: 11px;
+        margin-left: 8px;
+        text-decoration: line-through; }
