landing is done

--- a/src/scss/_best-sellers.scss
+++ b/src/scss/_best-sellers.scss
@@ -1,34 +1,47 @@
-@import './variables';
+@import "./variables";
 
 .best-sellers {
-    @include container;
-    &__main {
-        display: grid;
-        grid-template-columns: 2fr 3.5fr;
-        column-gap: 10px;
-
-        &--left {
-            &__bottom {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                margin-top: 55px;
-                &--options {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    &-icon {
-                        font-size: 22px;
-                        margin: 3px;
-                    }
-                }
-            }
-        }
-        &--right {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            row-gap: 10px;
-            column-gap: 10px;
-        }
+  @include container;
+  margin-bottom: 23px;
+  &__main {
+    display: grid;
+    grid-template-columns: 2fr 3.5fr;
+    column-gap: 10px;
+    margin-top: 20px;
+    @include sm {
+      row-gap: 12px;
+      grid-template-columns: 1fr;
     }
+
+    &--left {
+      display: grid;
+      &__bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 55px;
+        @include sm {
+          display: none;
+        }
+        &--options {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          &-icon {
+            font-size: 22px;
+            margin: 3px;
+          }
+        }
+      }
+    }
+    &--right {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      row-gap: 10px;
+      column-gap: 10px;
+      @include sm {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
 }
