--- a/src/scss/_featured.scss
+++ b/src/scss/_featured.scss
@@ -10,10 +10,25 @@
         @include md {
             grid-template-columns: 2.2fr 2fr .5fr;
         }
+        @include sm {
+            grid-template-columns: 2.2fr .5fr;       
+        }
         &--navigate {
             display: flex;
             justify-content: space-around;
             align-items: center;
+
+            @include sm {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+        }
+        &--menu{
+            @include sm {
+                display: grid;
+                grid-column: 1/3;
+                padding: 13px 15px;
+            }
         }
     }
     &__products{
@@ -21,10 +36,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         column-gap: 10px;
+        row-gap: 10px;
         @include sm {
             grid-template-columns: 1fr;
             row-gap: 15px;
-            justify-items: center;
         }
     }
 }
