--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -3,6 +3,9 @@
   // min-height: 77vh;
   display: grid;
   grid-template-rows: 2rem 1fr;
+  @include sm {
+    grid-template-columns: 1fr;
+  }
   &__top-nav {
     border-bottom: 1px solid rgb(156, 156, 156);
   }
@@ -10,9 +13,15 @@
     @include container; 
     display: grid;
     grid-template-columns: 26% 74%;
+    @include sm {
+      grid-template-columns: 1fr;
+    }
     &--left {
       display: grid;
       grid-template-rows: 5rem 1fr;
+      @include sm {
+        display: none;
+      }
       &__logo {
         width: 160px;
         object-fit: contain;
