--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -20,10 +20,14 @@
         align-items: center;
         width: 100%;
         font-family: sans-serif;
+        
         @include sm {
-            height: 93px;
+            height: 150px;
+            grid-template-columns: 1fr;
         }
         &__icon {
+            height: 60px;
+            object-fit: contain;
 
         }
         &__content{
