--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,9 @@ body {
   @media (max-width: 596px) {
     .landing-nav {
       width: 85vw; } }
+  @media (max-width: 596px) {
+    .landing-nav {
+      display: none; } }
   .landing-nav__set {
     display: flex;
     justify-content: space-between;
@@ -26,13 +29,16 @@ body {
   .landing-nav__set-item {
     padding-right: 1rem;
     color: #0f0f1d; }
-    .landing-nav__set-item :last-child {
+    .landing-nav__set-item:last-child {
       padding-right: 0; }
 
 .home {
   background: linear-gradient(to bottom, #f8cf04 150px, #55559a00 0%);
   display: grid;
   grid-template-rows: 2rem 1fr; }
+  @media (max-width: 596px) {
+    .home {
+      grid-template-columns: 1fr; } }
   .home__top-nav {
     border-bottom: 1px solid #9c9c9c; }
   .home__main {
@@ -44,9 +50,15 @@ body {
     @media (max-width: 596px) {
       .home__main {
         width: 85vw; } }
+    @media (max-width: 596px) {
+      .home__main {
+        grid-template-columns: 1fr; } }
     .home__main--left {
       display: grid;
       grid-template-rows: 5rem 1fr; }
+      @media (max-width: 596px) {
+        .home__main--left {
+          display: none; } }
       .home__main--left__logo {
         width: 160px;
         object-fit: contain;
@@ -112,6 +124,13 @@ body {
     display: grid;
     grid-template-rows: 3fr 2fr 2fr;
     z-index: 10; }
+    @media (max-width: 596px) {
+      .slider-item__info {
+        width: 85%;
+        left: 8%;
+        top: 16%;
+        align-items: center;
+        justify-items: center; } }
     .slider-item__info--title {
       font-size: 29px;
       font-weight: 600;
@@ -169,7 +188,11 @@ body {
     font-family: sans-serif; }
     @media (max-width: 596px) {
       .services-item {
-        height: 93px; } }
+        height: 150px;
+        grid-template-columns: 1fr; } }
+    .services-item__icon {
+      height: 60px;
+      object-fit: contain; }
     .services-item__content--title {
       font-weight: 600;
       font-size: 17px; }
@@ -191,23 +214,35 @@ body {
     @media (max-width: 768px) {
       .featured__header {
         grid-template-columns: 2.2fr 2fr .5fr; } }
+    @media (max-width: 596px) {
+      .featured__header {
+        grid-template-columns: 2.2fr .5fr; } }
     .featured__header--navigate {
       display: flex;
       justify-content: space-around;
       align-items: center; }
+      @media (max-width: 596px) {
+        .featured__header--navigate {
+          grid-column: 2/3;
+          grid-row: 1/2; } }
+    @media (max-width: 596px) {
+      .featured__header--menu {
+        display: grid;
+        grid-column: 1/3;
+        padding: 13px 15px; } }
   .featured__products {
     margin-top: 15px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 10px; }
+    column-gap: 10px;
+    row-gap: 10px; }
     @media (max-width: 596px) {
       .featured__products {
         grid-template-columns: 1fr;
-        row-gap: 15px;
-        justify-items: center; } }
+        row-gap: 15px; } }
 
 .section-title {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
   position: relative; }
   .section-title::after {
@@ -231,6 +266,9 @@ body {
     font-size: 13px;
     color: #3b3a3a;
     font-weight: 600; }
+    @media (max-width: 596px) {
+      .section-menu--item {
+        font-size: 16px; } }
   .section-menu--selected-item {
     border: 1px solid goldenrod;
     border-radius: 5px;
@@ -240,7 +278,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 100%; }
+  width: 50px; }
   .section-navigate__icon {
     border: 1px solid gray;
     cursor: pointer;
@@ -306,28 +344,308 @@ body {
 .best-sellers {
   width: 62vw;
   margin: 0 auto;
-  padding-top: 2px; }
+  padding-top: 2px;
+  margin-bottom: 23px; }
   @media (max-width: 596px) {
     .best-sellers {
       width: 85vw; } }
   .best-sellers__main {
     display: grid;
     grid-template-columns: 2fr 3.5fr;
-    column-gap: 10px; }
-    .best-sellers__main--left__bottom {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      margin-top: 55px; }
-      .best-sellers__main--left__bottom--options {
+    column-gap: 10px;
+    margin-top: 20px; }
+    @media (max-width: 596px) {
+      .best-sellers__main {
+        row-gap: 12px;
+        grid-template-columns: 1fr; } }
+    .best-sellers__main--left {
+      display: grid; }
+      .best-sellers__main--left__bottom {
         display: flex;
-        justify-content: center;
-        align-items: center; }
-        .best-sellers__main--left__bottom--options-icon {
-          font-size: 22px;
-          margin: 3px; }
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 55px; }
+        @media (max-width: 596px) {
+          .best-sellers__main--left__bottom {
+            display: none; } }
+        .best-sellers__main--left__bottom--options {
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .best-sellers__main--left__bottom--options-icon {
+            font-size: 22px;
+            margin: 3px; }
     .best-sellers__main--right {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       row-gap: 10px;
       column-gap: 10px; }
+      @media (max-width: 596px) {
+        .best-sellers__main--right {
+          grid-template-columns: 1fr; } }
+
+.popular-categories {
+  background-color: #ECECEC;
+  padding-bottom: 40px; }
+  .popular-categories__main {
+    width: 62vw;
+    margin: 0 auto;
+    padding-top: 2px;
+    margin-top: 10px; }
+    @media (max-width: 596px) {
+      .popular-categories__main {
+        width: 85vw; } }
+    .popular-categories__main--body {
+      margin-top: 10px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 10px;
+      row-gap: 10px; }
+      @media (max-width: 596px) {
+        .popular-categories__main--body {
+          grid-template-columns: 1fr;
+          justify-items: center; } }
+
+.popular-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 350px;
+  height: 220px;
+  border: 1px solid #cccccc;
+  font-family: sans-serif;
+  background-color: #fbfafa; }
+  @media (max-width: 596px) {
+    .popular-item {
+      max-width: 400px; } }
+  @media (max-width: 596px) {
+    .popular-item {
+      background-color: #ffffff; } }
+  .popular-item__image {
+    width: 100%;
+    object-fit: contain;
+    padding: 5px;
+    margin: auto;
+    padding: 10px; }
+  .popular-item__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 85%;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 2px; }
+    .popular-item__info--title {
+      font-size: 17px;
+      font-weight: 600; }
+    .popular-item__info--text {
+      font-size: 11px;
+      font-weight: 550;
+      color: #3d3b3b; }
+    .popular-item__info--show-all {
+      font-size: 14px;
+      font-weight: 600;
+      color: #FFD819; }
+
+.new-arrival {
+  width: 62vw;
+  margin: 0 auto;
+  padding-top: 2px;
+  margin-top: 30px;
+  margin-bottom: 30px; }
+  @media (max-width: 596px) {
+    .new-arrival {
+      width: 85vw; } }
+  .new-arrival__header {
+    display: grid;
+    grid-template-columns: 4.5fr 2fr .5fr;
+    align-items: center;
+    margin-bottom: 15px; }
+    @media (max-width: 596px) {
+      .new-arrival__header {
+        grid-template-columns: 2.2fr .5fr; } }
+    .new-arrival__header--navigate {
+      display: flex;
+      justify-content: space-around;
+      align-items: center; }
+      @media (max-width: 596px) {
+        .new-arrival__header--navigate {
+          grid-column: 2/3;
+          grid-row: 1/2; } }
+    @media (max-width: 596px) {
+      .new-arrival__header--menu {
+        display: grid;
+        grid-column: 1/3;
+        padding: 13px 15px; } }
+  .new-arrival__main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 8px;
+    column-gap: 8px; }
+    @media (max-width: 596px) {
+      .new-arrival__main {
+        grid-template-columns: 1fr; } }
+
+.mini-card {
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+  border: 1px solid lightgray;
+  font-family: sans-serif;
+  min-height: 120px; }
+  @media (max-width: 596px) {
+    .mini-card {
+      margin: auto; } }
+  .mini-card__left {
+    padding: 5px; }
+    .mini-card__left--image {
+      width: 100%;
+      height: 75px;
+      display: block;
+      object-fit: contain; }
+  .mini-card__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; }
+    .mini-card__info--title {
+      font-size: 14px;
+      font-weight: 600; }
+      @media (max-width: 596px) {
+        .mini-card__info--title {
+          font-size: 17px; } }
+    .mini-card__info--rating {
+      display: flex;
+      flex-direction: row;
+      align-items: center; }
+      .mini-card__info--rating-reviews {
+        margin-left: 4px;
+        margin-bottom: 5px;
+        font-size: 10px; }
+    .mini-card__info--price {
+      font-size: 15px;
+      font-weight: 600; }
+    .mini-card__info--sale {
+      display: flex;
+      align-items: center; }
+      .mini-card__info--sale__current-price {
+        font-size: 16px;
+        color: #FF0000;
+        font-weight: 600; }
+      .mini-card__info--sale__old-price {
+        font-size: 11px;
+        margin-left: 8px;
+        text-decoration: line-through; }
+
+.latest-news {
+  width: 62vw;
+  margin: 0 auto;
+  padding-top: 2px;
+  margin-bottom: 35px; }
+  @media (max-width: 596px) {
+    .latest-news {
+      width: 85vw; } }
+  .latest-news__header {
+    display: grid;
+    grid-template-columns: 1fr 60px; }
+  .latest-news__main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 15px; }
+    @media (max-width: 596px) {
+      .latest-news__main {
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+        margin-top: 20px; } }
+  .latest-news__partners {
+    width: 100%;
+    border: 1px solid #9a9999;
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    margin-top: 25px; }
+    @media (max-width: 596px) {
+      .latest-news__partners {
+        grid-template-columns: 1fr 1fr;
+        padding: 2px;
+        height: 190px;
+        align-items: center;
+        justify-items: center; } }
+    .latest-news__partnersimg {
+      padding: 5px; }
+
+.latest-news-item {
+  display: grid;
+  grid-template-columns: 1.3fr 1fr; }
+  @media (max-width: 596px) {
+    .latest-news-item {
+      grid-template-columns: 1fr; } }
+  .latest-news-item__image {
+    width: 100%;
+    object-fit: contain;
+    padding: 6px; }
+  .latest-news-item__main {
+    display: grid; }
+    .latest-news-item__main--title {
+      font-size: 13px;
+      font-weight: 550;
+      margin-bottom: 5px; }
+      @media (max-width: 596px) {
+        .latest-news-item__main--title {
+          font-size: 19px;
+          margin-top: 10px; } }
+    .latest-news-item__main--date {
+      font-size: 12px;
+      color: #6b6b6b; }
+      @media (max-width: 596px) {
+        .latest-news-item__main--date {
+          grid-row: 1/2; } }
+    .latest-news-item__main--description {
+      font-size: 13px;
+      text-align: justify;
+      color: #7d7d7d; }
+      @media (max-width: 596px) {
+        .latest-news-item__main--description {
+          font-size: 17px; } }
+
+.product-shortlist {
+  width: 62vw;
+  margin: 0 auto;
+  padding-top: 2px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 18px; }
+  @media (max-width: 596px) {
+    .product-shortlist {
+      width: 85vw; } }
+  @media (max-width: 596px) {
+    .product-shortlist {
+      display: none; } }
+  .product-shortlist-item {
+    display: grid;
+    grid-template-columns: 1fr; }
+
+.menu {
+  display: grid;
+  grid-template-rows: 2.2rem 1fr;
+  height: 100%;
+  margin-right: 10px;
+  border: 3px solid #f8cf04; }
+  .menu__top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 18px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #dededf; }
+  .menu__list--item {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 10px;
+    font-size: 16px;
+    transition: 0.4s; }
+    .menu__list--item:hover {
+      background-color: #f2f2f2;
+      padding: 5px 0.5px; }
